syntax = "proto3";

option csharp_namespace = "cef.protocol";

service Greeter{
    rpc SayHello (HelloRequest) returns (HelloResponse);
    rpc SayWorld (HelloRequest) returns (HelloResponse);
}

message HelloRequest{
    string name = 1;
}

message HelloResponse{
    string message = 1;
}


service CefProtocolService {
    // 获取进程序列
    rpc GetSerial (SerialRequest) returns (SerialResponse);
    // 控制台日志
    rpc Echo(stream LogItem) returns (CommonResponse);
    // 设置账号信息
    rpc SetUserInfo(UserInfoRequest) returns(CommonResponse);
}

message UserInfoRequest {
    int32 processId = 1;
    string userName = 2;
    string password = 3;
}


message SerialRequest {
    // 进程id
    int32 id = 1;
}

message SerialResponse {
    int32 serial = 1;
    string msg = 2;
}

message LogItem {
    string msg = 1;
    string LogColor = 2; 
}

message CommonResponse {
    int32 code = 1;
    string msg = 2;
}